feat: modify navbar and footer

--- a/src/components/BrandFilter.module.css
+++ b/src/components/BrandFilter.module.css
@@ -30,8 +30,8 @@
 }
 
 .tabActive {
-  background: #1867c4;
-  border-color: #1867c4;
+  background: #6366f1;
+  border-color: #6366f1;
   color: #fff;
 }
 
@@ -57,9 +57,9 @@
 }
 
 .itemActive {
-  background: #eff6ff;
-  border-color: #1867c4;
-  color: #1867c4;
+  background: #eef2ff;
+  border-color: #6366f1;
+  color: #6366f1;
 }
 
 .more {
@@ -72,5 +72,5 @@
 }
 
 .more:hover {
-  color: #111;
+  color: #6366f1;
 }
