--- a/src/components/CarrierFilter.module.css
+++ b/src/components/CarrierFilter.module.css
@@ -40,7 +40,7 @@
 }
 
 .itemActive {
-  background: #1867c4;
-  border-color: #1867c4;
+  background: #6366f1;
+  border-color: #6366f1;
   color: #fff;
 }
