--- a/src/components/StorageFilter.module.css
+++ b/src/components/StorageFilter.module.css
@@ -30,7 +30,7 @@
 }
 
 .itemActive {
-  background: #eff6ff;
-  border-color: #1867c4;
-  color: #1867c4;
+  background: #eef2ff;
+  border-color: #6366f1;
+  color: #6366f1;
 }
